Update Simulador de eleição.html

--- a/Simulador de eleição - Copia.html
+++ b/Simulador de eleição - Copia.html
@@ -148,6 +148,7 @@
 
     <script>
         // --- DATA MOCKS ---
+        // Em uma aplicação real, estes dados viriam de um banco de dados ou API.
         const DADOS_ELEICOES = {
             'SC': {
                 'df': {
@@ -179,7 +180,7 @@
             }
         };
 
-        // --- INITIALIZATION ---
+        // --- INICIALIZAÇÃO ---
         window.onload = function() {
             const ufSelect = document.getElementById('uf');
             const tipoEleicaoSelect = document.getElementById('tipoEleicao');
